--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <div class="div-fotos">
         <div class="container2">
             <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto da onda verde">
-            <h3 class="descricao">ONDA VERDE:É uma sincronização de semáforos que proporciona aos condutores que estiverem mantendo velocidade média entre 30km/h e 
-                50km/h, probabilidade de seguirem sequências em sinais verdes.
+            <h3 class="descricao">ONDA VERDE:
         <div class="container2">
             <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto...">
             <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. 
