--- a/loc.html
+++ b/loc.html
@@ -43,14 +43,14 @@
         </div>
     </header>
  
-    <div class="wrapper">
+    <section class="wrapper">
         <div class="fale-conosco">
             <p class="titulo">Fale conosco</p>
             <p class="inf">Av. Eng. Francisco Beltrão, 1005 - Centro, Ibiporã - PR, 86200-000</p>     
             <p class="inf">Colégio Unidade Polo</p> 
             <p class="inf">Instagram: d_boots_</p>
         </div>
-    </div>
+    </section>
 
     <div class="mapa-conteudo">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58642.35977306467!2d-51.130782161706485!3d-23.274090106585703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb46d75c807d61%3A0xd18b23db98a0e9aa!2sIbipor%C3%A3%2C%20PR%2C%2086200-000!5e0!3m2!1spt-BR!2sbr!4v1690805486733!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
