--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="sobre-style.css">
     <link rel="stylesheet" href="abas-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">    </head>
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
+</head>
    
     <body>
     
@@ -37,7 +38,7 @@
                             <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Trabalhos</span></a>
                         </li>
                         <li class="item-menu">
-                            <a href="contato.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                            <a href="sobre.html"><i class="bi bi-envelope"></i><span class="menu-label">Sobre</span></a>
                         </li>
                     </ul>
                 </nav>
@@ -46,8 +47,7 @@
 
         <main>
         <div class="principal">
-            <p class="escrita">O site D-BOOTS foi criado em 2023, por aulos da escola unidade polo para falarmos sobre robotica e postarmos sobre projetos desenvolvidos em sala.Nesse site teremos:localizacao, trabalhos, nós e sobre.</p>
-            <p></p>
+            <p class="escrita">Convidamos você a acompanhar nossa jornada na robótica educacional por meio deste site. Aqui, compartilharemos nossos projetos mais recentes, tutoriais, dicas e muito mais. Sinta-se à vontade para entrar em contato conosco, fazer perguntas ou sugerir projetos colaborativos. Juntos, podemos construir um futuro mais tecnológico e promissor! <br> Junte-se a nós nesta emocionante aventura na robótica educacional, onde a criatividade e a inovação são o combustível que nos impulsiona rumo ao futuro!</p>
         </div>
     </main>
     </body>
