--- a/trabalhos.html
+++ b/trabalhos.html
@@ -67,7 +67,7 @@
             <h3 class="descricao">PUSH BOTTON: O botão de pressão(Push Botton), também conhecido como Chave Táctil, é um dispositivo utilizado para acionar, abrindo ou fechando um determinado circuito.</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="fotinhatrabalho.jpg" alt="foto da Bella">
+            <img class="polaroid" src="projetootrabalho.jpg" alt="foto da Bella">
             <h3 class="descricao">PUSH BOTTON: O botão de pressão (Push Botton), também conhecido como Chave Táctil, é um dispositivo utilizado para acionar, abrindo ou fechando um determinado circuito. </h3>
         </div>
         <div class="container2">
