--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <div class="container2">
             <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto da onda verde">
             <h3 class="descricao">ONDA VERDE:
+          </h3>
+        </div>
         <div class="container2">
             <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto...">
             <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. 
