--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           </h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="projetos/super-maquina.jpg" alt="foto do projeto...">
+            <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto...">
             <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. 
         </div>
         <div class="container2">
-            <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto semáforo simples">
+            <img class="polaroid" src="projetos/super-maquina.jpg" alt="foto do projeto semáforo simples">
             <h3 class="descricao">SEMÁFORO CARRO E PEDESTRES: Este projeto visa a demonstrar como
                 funciona a sincronização entre os semáforos
                 para motoristas e para pedestres. </h3>
