--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         <h2 class="trabalhos">Nossos Trabalhos</h2>
         <div class="div-fotos">
         <div class="container2">
-            <img class="polaroid" src="projetos/buzzer.jpg" alt="foto do projeto da onda verde">
+            <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto da onda verde">
             <h3 class="descricao">ONDA VERDE:
           </h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto...">
+            <img class="polaroid" src="projetos/buzzer.jpg" alt="foto do projeto...">
             <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. 
         </div>
         <div class="container2">
