--- a/trabalhos.html
+++ b/trabalhos.html
@@ -50,7 +50,7 @@
         <div class="div-fotos">
         <div class="container2">
             <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto da onda verde">
-            <h3 class="descricao">Onda Verde</h3>
+            <h3 class="descricao">Onda Verde: Tipo de coordenação semafórica em que uma corrente de trânsito recebe indicação luminosa verde numa sequência de semáforos de uma determinada rede.</h3>
         </div>
         <div class="container2">
             <img class="polaroid" src="image.jpg" alt="foto do projeto...">
