--- a/loc.html
+++ b/loc.html
@@ -49,6 +49,7 @@
             <p class="inf">Av. Eng. Francisco Beltrão, 1005 - Centro, Ibiporã - PR, 86200-000</p>     
             <p class="inf">Colégio Unidade Polo</p> 
             <p class="inf">Instagram: d_boots_</p>
+            <P class="inf">telefone para contato: 43 991625151</P>
         </div>
     </section>
 
